test/spec_vectors/ref/ok/module_0.wat
(module (type $t (func)) (func (param funcref externref (ref func) (ref extern) (ref 0) (ref $t) (ref 0) (ref $t) (ref null func) (ref null extern) (ref null 0) (ref null $t))))