test/spec_vectors/ref/fail/module_6.wat
(module (func $func-param-invalid (param (ref 1))))